fixes to subsection collapsing logic

--- a/dalme_app/static/css/dalme_public/dalme_public.css
+++ b/dalme_app/static/css/dalme_public/dalme_public.css
@@ -2981,3 +2981,6 @@ section.transcription {
 .popover-body {
   color: #fff;
 }
+.subsection-container {
+  margin: 1rem 1rem 1.5rem .5rem;
+}
